# CSALab2Server

./: CMakeLists.txt  CSALab2.cpp  CSALab2.sln  CSALab2.vcxproj  CSALab2.vcxproj.filters  Dockerfile  Makefile  MyServer.cpp  MyServer.h  Test.cpp  docker-compose.yml  package.deb  users.db
.github/workflows/: build.yaml  build.yml
package/DEBIAN/: control
src/: CSALab2.cpp  Microservice.cpp  MyServer.cpp  MyServer.h  Test.cpp
